--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fontmake>=2.4
 fontbakery>=0.8.11
-gftools @ git+https://github.com/googlefonts/gftools@builder2
-fontprimer @ git+https://github.com/simoncozens/fontprimer
+gftools==0.9.52
+fontprimer @ git+https://github.com/simoncozens/fontprimer@v0.1.0
 gftools[qa]>=0.9.23
 drawbot-skia>=0.4.8
 sh>=1.14.2
